# pocketsphinx

./: BUILD.bazel  WORKSPACE
src/libpocketsphinx/: acmod.c  bin_mdef.h  pocketsphinx_internal.h
test/: BUILD.bazel
test/unit/: BUILD.bazel  test_jsgf.c
