package(default_visibility = ["//visibility:public"])

cc_binary(
  name = "continuous",
  srcs = ["src/programs/continuous.c"],
  deps = [
    ":libpocketsphinx"
  ]
)

cc_library(
  name = "headers",
  hdrs = glob(["include/*.h"]),
  includes = ["include"],
  visibility = ["//visibility:public"]
)
# bazel query "deps(libpocketsphinx)" | dot -Tsvg > ~/deps.png
# bazel query "deps(libpocketsphinx)" > test.txt
cc_library(
    name = "libpocketsphinx",
    srcs = glob(["src/libpocketsphinx/*.c"]),
    hdrs = glob(["src/libpocketsphinx/*.h"]),
    includes = ["src/libpocketsphinx"],
    deps = [
      "headers", 
      "@sphinxbase//:libsphinxad",
      "@sphinxbase//:sphinxbase",
      "@sphinxbase//:sphinx_fe",
    ],
    visibility = ["//visibility:public"]
)